# research-data-opt-in-proxy

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  vercel.json
app/: __init__.py  anonymizer.py  archive_worker.py  chutes_trace.py  client_ip.py  config.py  db.py  export.py  internal_routes.py  main.py  models.py  object_storage.py  proxy.py  rate_limit.py  recorder.py  response_storage.py  siphash.py  storage_migration.py
scripts/: backfill_compact_json.py  export_full_text.py  provision_archive_storage.py
tests/: conftest.py
tests/e2e/: test_live_llm_proxy.py
tests/integration/: test_export.py  test_internal_archive_export.py  test_proxy_extended.py  test_proxy_recording.py
tests/unit/: test_chutes_trace.py  test_config.py  test_export_auth.py  test_export_full_text.py  test_main.py  test_object_storage.py  test_proxy_headers.py  test_rate_limit.py  test_response_storage.py  test_siphash_and_anonymizer.py
