[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "research-data-opt-in-proxy"
version = "0.1.0"
description = "Opt-in OpenAI-compatible proxy for llm.chutes.ai with dual-format usage recording"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Chutes.ai" }
]
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.6.0",
  "tiktoken>=0.9.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "api",
  "tests",
  "README.md",
  "pyproject.toml",
  "vercel.json",
]
